--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -17,5 +17,8 @@
       }
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=.\\sqlexpress;Database=BookStoreDB;Trusted_Connection=true;TrustServerCertificate=true;"
+  }
 }
