--- a/BookStoreApp.API/appsettings.json
+++ b/BookStoreApp.API/appsettings.json
@@ -20,5 +20,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "Server=.\\sqlexpress;Database=BookStoreDB;Trusted_Connection=true;TrustServerCertificate=true;"
+  },
+  "JwtSettings": {
+    "Issuer": "BookStoreAPI",
+    "Audience": "BookStoreAPIClient",
+    "Duration": 1
   }
 }
